fix: list style on mobile

--- a/public/css/mq.less
+++ b/public/css/mq.less
@@ -56,7 +56,7 @@
 
     li {
       padding-left: 8px;
-      list-style-position: inside;
+      // list-style-position: inside;
     }
 
     a.anchor {
@@ -165,7 +165,7 @@
 
   .post-content ul,
   article.post li {
-    padding-left: 0;
+    // padding-left: 0;
   }
 
   a.cta {
