--- a/public/css/screen.less
+++ b/public/css/screen.less
@@ -519,8 +519,8 @@ ul.links {
   ul {
     box-sizing: border-box;
     clear: left;
-    padding: 0;
-    padding-left: 0;
+    // padding: 0;
+    // padding-left: 0;
   }
 
   ul.flickr {
